# flux-context

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  INFO.md
src/: lib.rs  main.rs
src/adapters/: fs_reader.rs  fs_scanner.rs  mod.rs
src/adapters/output/: json.rs  markdown.rs  mod.rs  text.rs  xml.rs
src/adapters/parsers/: docx.rs  excel.rs  fallback.rs  mod.rs  pdf.rs
src/core/: config.rs  content.rs  file.rs  mod.rs
src/ports/: mod.rs  reader.rs  scanner.rs  writer.rs
src/ui/: mod.rs  state.rs  view.rs
tests/: cli_tests.rs
