[package]
name = "context_engine"
version = "0.1.0"
edition = "2021"
authors = ["Raul"]
description = "Volcador de proyectos."
readme = "README.md"
rust-version = "1.80"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
thiserror = "2.0"
rayon = "1.10"
ignore = "0.4"
quick-xml = { version = "0.39.0", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
arboard = "3.4"
pdf-extract = "0.10.0"
zip = "7.2.0" 
regex = "1.10"

[dev-dependencies]
# Testing
assert_cmd = "2.0"
tempfile = "3.12"
predicates = "3.1"

[profile.release]
# Optimization Profile
opt-level = 3
lto = true
codegen-units = 1
strip = true